# cargo-checkct

./: .gitignore  .gitmodules  Cargo.toml  Containerfile  README.md  TODO.md  binsec.patch  build.rs  unisim.patch
.github/workflows/: lint.yml  test.yml
cargo_checkct/: Cargo.toml
cargo_checkct/examples/chachapoly/: Cargo.toml
cargo_checkct/examples/masked_aes/: Cargo.toml
cargo_checkct/src/: add.rs  common.rs  init.rs
cargo_checkct/template/.cargo/: config.toml
cargo_checkct/tests/: subtle_eq.rs  vulnerable_eq.rs
cargo_checkct/tests/subtle_eq/: Cargo.toml
chacha20poly/: Cargo.toml
chacha20poly/.cargo/: config.toml
chacha20poly/src/: main.rs
checkct/: Cargo.toml  build.rs  driver.binsec.template
checkct/src/: lib.rs
checkct_macros/: Cargo.toml
checkct_macros/examples/: attribute.rs
checkct_macros/src/: lib.rs
dalek/: Cargo.toml
dalek/.cargo/: config.toml
dalek/src/: main.rs
examples/chachapoly/: Cargo.toml
examples/chachapoly/checkct/: Cargo.toml  rust-toolchain.toml
examples/chachapoly/src/: lib.rs
examples/dalek/: Cargo.toml
examples/masked_aes/: build.rs
examples/masked_aes/better_cortexm/: .gitignore  LICENSE  Makefile  README.md
examples/masked_aes/checkct/: Cargo.toml  rust-toolchain.toml
examples/masked_aes/src/: lib.rs
examples/secp256K1/: Cargo.toml
examples/secp256K1/checkct/: rust-toolchain.toml
src/: add.rs  common.rs  init.rs  main.rs  run.rs
template/: Cargo.toml
template/.cargo/: config.toml
template/driver/: Cargo.toml
tests/: subtle_eq.rs  vulnerable_eq.rs
tests/vulnerable_eq/: Cargo.toml
(+113 files in other folders)
